tests/fixtures/invalid/ptr_read_without_unsafe.lby
fn main -> i64
    let p ptr_i64 = alloc(42)
    let value i64 = ptr_read(p)
    dealloc(p)
    value
